--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #e8eef5; /* Fundo da página */
+            background-color: #e8eef5; 
             display: flex;
             justify-content: center;
             align-items: center;
@@ -16,7 +16,7 @@
         }
 
         .container {
-            background-color: #ffffff; /* Fundo do formulário */
+            background-color: #ffffff; 
             padding: 25px;
             width: 400px;
             border-radius: 10px;
@@ -25,7 +25,7 @@
 
         h4 {
             text-align: center;
-            color: #2a4d69; /* Cor do título */
+            color: #2a4d69; 
             margin-bottom: 20px;
         }
 
